# transformer_from_scratch

./: LICENSE  README.md  pyproject.toml
src/: transformer_model.py
